# edu_school21

./: Makefile  a.out  ft_atoi.c  ft_calloc.c  ft_isdigit.c  ft_itoa.c  ft_memccpy.c  ft_memmove.c  ft_rev_memcpy  ft_strchr.c  ft_strdup.c  ft_strlcpy.c  ft_strlen.c  ft_strnstr.c  get_next_line.c  get_next_line.h  itoa_base.c  libft.h  main_libft
ft_printf/: CMakeLists.txt  Makefile  a.out  char_print.c  d.c  flags_full.c  ft_done_width.c  ft_pars_modifiers.c  ft_print.c  ft_printf.c  ft_printf.h  ft_printing.c  ft_putchar.c  ft_putstr_chec.c  ft_strlen.c  init_flags.c  intit_flags.c  itoa_base.c  itoa_base2.c  main.c  pars_modifiers.c  parsers.c  print_char.c  print_deci.c  print_pointer.c  print_poiter.c  print_procent.c  print_str.c  print_unsig_deci.c  print_x.c  print_xx.c  print_xxx.c  printing.c  putstr_chec.c  reset_flags.c
ft_server/: Dockerfile
ft_services/: setup.sh
get_next_line/: Makefile  a.out  answer.text  test.c  (+4 more)
untitled1/: CMakeLists.txt  a.out  char_print.c  ft_atoi.c  ft_isdigit.c  ft_pars_modifiers.c  ft_print.c  ft_printf.c  ft_printf.h  ft_printing.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr_chec.c  ft_putstr_prec.c  ft_reset_flags.c  ft_strchr.c  ft_strlen.c  ft_treat_width.c  init_flags.c  main.c  pars_modifiers.c  parsers.c  print_char.c  print_deci.c  print_procent.c  print_str.c  print_unsig_deci.c  print_x.c
untitled1/libft/: Makefile  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_memchr.c  ft_memcpy.c  ft_memset.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strlcat.c  ft_strnstr.c  ft_substr.c
(+197 files in other folders)
