cmake_minimum_required(VERSION 3.17)
project(untitled1 C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled1 ft_printf.h ft_printing.c ft_printf.c ft_pars_modifiers.c ft_printf.c init_flags.c print_str.c parsers.c print_char.c main.c ft_atoi.c ft_isdigit.c ft_strchr.c ft_strlen.c ft_putstr_prec.c ft_treat_width.c ft_putchar.c)